# MrDamian-Old

./: .env  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .golangci.yml  .octocov.yml  Cargo.toml  README.ja.md  README.md  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  tools.go  tsconfig.json  vite.config.ts  wails.json
config/: config.go
frontend/: .eslintignore  .eslintrc.cjs  .prettierrc.cjs  index.html  package-lock.json  package.json  package.json.md5  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  AssignmentModal.tsx  ContextMenu.tsx  PropertiesNode.tsx  main.tsx  pipeline.ts  styles.css
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/presentation/: App.d.ts  App.js
model/: error.go  models.go
operation/pipeline/: component.go  connection.go  handles.go  message.go  packet.go  port.go
operation/twitch/: publisher.go
operation/twitch/publisher/: process.go  publisher.go
operation/twitch/subscriber/: process.go  subscriber.go
presentation/: app.go  component.go  edge.go  editor.go  protocol.go
repository/: mocks.go  repositories.go
repository/editor/: repository.go
repository/event/: repository.go
repository/event/wails/: repository.go
repository/pipeline/: repository.go
repository/pipeline/memory/: repository.go
repository/pipeline/mock/: repository.go
src/: App.tsx  AssignmentModal.tsx  ContextMenu.tsx  PropertiesNode.tsx  bindings.ts  client.rs  main.rs  main.tsx  pipeline.ts  speach.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client.rs  config.rs  error.rs  main.rs  pipeline.rs  tray.rs
src-tauri/src/model/: error.rs  mod.rs
src-tauri/src/operation/: mod.rs
src-tauri/src/operation/pipeline/: component.rs  connection.rs  mod.rs  packet.rs  port.rs
src-tauri/src/operation/twitch/: publisher.rs  subscriber.rs
src-tauri/src/pipeline/: component.rs  connection.rs  handle.rs  message.rs  mod.rs  packet.rs  port.rs
src-tauri/src/presentation/: mod.rs  protocol.rs  tray.rs
src-tauri/src/presentation/command/: component.rs  edge.rs  editor.rs  mod.rs  pipeline.rs
src-tauri/src/protocol/: mod.rs
src-tauri/src/repository/: editor.rs  mod.rs  pipeline.rs
src-tauri/src/repository/pipeline/: editing.rs  mod.rs  running.rs
src-tauri/src/twitch/: mod.rs  publisher.rs  subscriber.rs
task/: main.go
twitch/: pubsub.go  pubsub_test.go
