[package]
name = "mrdamian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"

twitch_api = { version = "0.7.0-rc.6",features = [ "twitch_oauth2", "client", "helix", "tmi", "eventsub", "pubsub", "hmac", "reqwest", "unsupported" ] }

reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = { version = "1.0.96" }

tokio = { version = "*", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }

thiserror = "1.0.40"
miette = { version = "5.8.0", features = ["fancy"] }
url = "2.3.1"
futures = "0.3.28"
