[package]
name = "mrdamian"
version = "0.1.0"
description = "Mr.Damian is your twitch BOT. This allows you to customize twitch bot."
edition = "2021"
license = ""
repository = ""

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open", "system-tray"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = { version = "1.0.96" }

dotenv = "*"

twitch_api = { version = "0.7.0-rc.6",features = [ "twitch_oauth2", "client", "helix", "tmi", "eventsub", "pubsub", "hmac", "reqwest", "unsupported" ] }

reqwest = { version = "0.11.17", features = ["json"] }

tokio = { version = "*", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }

thiserror = "1.0.40"
miette = { version = "5.8.0", features = ["fancy"] }
url = "2.3.1"
futures = "0.3.28"
async-trait = "0.1.68"
hashbrown = "0.13.2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
